src/test/custom/invalid/for/condNotExpr.wacc
# a for-loop with the condition field being an statement instead of expression

# Output:
# #syntax error#

# Program:

begin
  for (int i = 0; int j = 0; j = j + 1) do
    println j
  done
end